# box-fraise-server

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
admin/: index.html
docker/init/: 01-roles.sql
migrations/: 0001_init.sql  0002_multi_key_and_staff.sql  0003_schedule.sql  0004_celestial.sql  0005_consultations_and_cards.sql  0006_hair_profiles_and_model_requests.sql  0007_event_questions.sql  0008_prune_non_mvp.sql  0009_businesses.sql  0010_business_fields.sql  0011_event_poster.sql
src/: app.rs  audit.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  maintenance.rs
src/celestial/: calc.rs  mod.rs  routes.rs  types.rs  zodiac.rs
src/domain/: mod.rs
src/domain/admin/: routes.rs  service.rs
src/domain/businesses/: repository.rs  routes.rs  service.rs  types.rs
src/domain/consultations/: mod.rs  repository.rs  routes.rs  service.rs  types.rs
src/domain/events/: repository.rs  routes.rs  service.rs  types.rs
src/domain/modeling/: mod.rs  repository.rs  routes.rs  service.rs  types.rs
src/domain/oauth/: jwt.rs  keys.rs  mod.rs  routes.rs  service.rs  types.rs
src/http/: admin_assets.rs  extractors.rs  middleware.rs  mod.rs
tests/: integration.rs
web/: index.html
web/api/: index.html
web/business/: index.html
web/card/: index.html
web/donations/: index.html
web/events/: index.html
web/ios/: index.html
web/join/: index.html
web/js/: box-fraise.js
web/my/: index.html
web/pass/: index.html
web/portraits/: index.html
web/questions/: index.html
web/rajzyngier/: index.html
web/studio/: index.html
web/vision/: index.html
(+19 files in other folders)
